--- a/J_NonCoplanar/J_NonCoplanar/J_NonCoplanar.csproj
+++ b/J_NonCoplanar/J_NonCoplanar/J_NonCoplanar.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="J_NonCoplanarBlocks.cs" />
+    <Compile Include="J_NonCoplanarArcCircles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
