--- a/J_Tools.csproj
+++ b/J_Tools.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="J_NonCoplanarTools.cs" />
     <Compile Include="J_BlockTools.cs" />
     <Compile Include="J_DatabaseTools.cs" />
     <Compile Include="J_ObjectTools.cs" />
